--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quiz-container">
-        <h1>Quiz App</h1>
-        <div class="timer">Time Left: <span id="time">30</span> sec</div>
-        <div id="question-container">
-        <p id="question">Loading...</p> 
-        <div id="answers"></div>
-    </div>
-       <button id="next-btn">Next</button>
-       <p id="score"></p>
-    </div>
+  <h1>GAME BOARD</h1>
+    <div id="game-board"></div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
-
